--- a/client/src/app/video-detail/video-detail.component.html
+++ b/client/src/app/video-detail/video-detail.component.html
@@ -1,14 +1,38 @@
-<div class="clr-row">
-  <div class="clr-col-4">
-      <div class="card-img">
+<div class="clr-row" id="video-wrapper">
+  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+      <div class="card-img " id="video-img">
           <img class="single-img" src="https://2.bp.blogspot.com/-Tc5FpWGHMrM/WyR_YCc_HKI/AAAAAAAFFuo/KpXuVB1A-do_UOZzHqZYjUl35PtGG6xtgCHMYCw/s0/dr_seuss_how_the_grinch_stole_christmas-454843405-large.jpg" alt="">
       </div>
   </div>
-  <div class="clr-col-8">
-    <header>
+  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+      <form>
+          <section class="form-block">
       <h2>The Grinch</h2>
       <h3>By <a href="#">Author</a> - Thu Sep 14 2017 </h3>
+      <h4>Running Time: 120 minutes</h4>
+      <h4>Genre: Catoon</h4>
+      <h4>Director: Kim Ji-won</h4>
+      
+          <div class="select col-xl-8 col-lg-8 col-md-8">
+              <select id="aForm_3">
+                  <option value="0" selected disabled>Customer</option>
+                  <option>Option 1</option>
+                  <option>Option 2</option>
+                  <option>Option 3</option>
+                  <option>Option 4</option>
+              </select>
+          </div>
+      <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
+      <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
+      <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
+      <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
+      <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
+      
       <blockquote>Morbi sem mauris, laoreet ut, rhoncus aliquet, pulvinar sed, nisl. Nunc rhoncus dui vel sem.</blockquote>
-    </header>
+
+      <button type="button" class="btn" routerLink="/videos">Cancel</button>
+      <button type="button" class="btn btn-primary">Reserve</button>
+      </section>
+      </form>
   </div>
 </div>
