--- a/client/src/app/video-grid/video-grid.component.html
+++ b/client/src/app/video-grid/video-grid.component.html
@@ -1,14 +1,6 @@
 <div class="row">
-
-  <video-single></video-single>
-  <video-single></video-single>
-  <video-single></video-single>
-  <video-single></video-single>
-  <video-single></video-single>
-  <video-single></video-single>
-  <video-single></video-single>
-  <video-single></video-single>
-  <video-single></video-single>
-  <video-single></video-single>
-
+    <video-single 
+        *ngFor="let video of videos"
+        [video]="video"
+    ></video-single>
 </div>
