--- a/client/src/app/video-creation/video-creation.component.html
+++ b/client/src/app/video-creation/video-creation.component.html
@@ -1,3 +1,45 @@
-<p>
-  video-creation works!
-</p>
+<div class="clr-row" id="video-wrapper">
+    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="card-img " id="video-img">
+            <img class="single-img" src="{{ video.image }}" alt="">
+            <input type="file" 
+            (change)="fileChange($event)"
+            placeholder="Upload file" accept=".png,.jpg"   
+            >
+        </div>
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+ 
+        <section class="form-block">
+        <h2><input type="text" value="" placeholder="Title" 
+            [ngModelOptions]="{standalone: true}" 
+            [(ngModel)]="video.title" 
+            ></h2>
+        <h3>By <input type="text" value="" placeholder="Director"
+            [ngModelOptions]="{standalone: true}" 
+            [(ngModel)]="video.director" 
+            > </h3>
+        <h4>Running Time: <input type="text" value="" placeholder="" style="width: 5%"
+            [ngModelOptions]="{standalone: true}" 
+            [(ngModel)]="video.length" 
+            > minutes</h4>
+        <h4>Genre: <input type="text" value=""
+            [ngModelOptions]="{standalone: true}" 
+            [(ngModel)]="video.genre" 
+            > </h4>
+        <br>
+        <input type="text" placeholder="Star" style="width: 1%;"
+            [ngModelOptions]="{standalone: true}" 
+            [(ngModel)]="video.star" 
+        >/5
+        <blockquote>
+          <input type="text" value="" placeholder="Description" style="width: 100%"
+            [ngModelOptions]="{standalone: true}" 
+            [(ngModel)]="video.description" 
+          >
+        </blockquote>
+        <button type="button" class="btn" routerLink="/portal/video-management">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="createVideo($event)">Create</button>
+        </section>
+    </div>
+  </div>
