Add Video details component

--- a/client/src/app/video-detail/video-detail.component.css
+++ b/client/src/app/video-detail/video-detail.component.css
@@ -3,7 +3,7 @@
     width: 2%;
     height: auto;
 }
-#video-img {
+/* #video-img {
     width: 80%;
     margin-right: 5%;
     border: 1px solid grey;
@@ -11,4 +11,4 @@
 
 #video-wrapper {
     margin: 3%;
-}
+} */
