Video suggestions & Form login

--- a/client/src/app/admin-portal/admin-portal.component.html
+++ b/client/src/app/admin-portal/admin-portal.component.html
@@ -17,6 +17,7 @@
                 <label for="tabexample2">User</label>
                 <ul class="nav-list">
                     <li><a class="nav-link" routerLinkActive="active" routerLink="/portal/user-management">All Users</a></li>
+                    <li><a class="nav-link" routerLinkActive="active" routerLink="/portal/user-create">Create</a></li>
                 </ul>
             </section>
 
