--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,58 +1,91 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js" lang="en">
+
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="https://unpkg.com/@clr/ui@0.12.5/clr-ui.min.css" />
-
-  <link rel="stylesheet" href="https://unpkg.com/clarity-icons/clarity-icons.min.css">
-
-  <!--CLARITY ICONS DEPENDENCY: CUSTOM ELEMENTS POLYFILL-->
-  <script src="https://unpkg.com/@webcomponents/custom-elements/custom-elements.min.js"></script>
-
-  <!--CLARITY ICONS API & CORE SHAPES SET-->
-  <script src="https://unpkg.com/clarity-icons/clarity-icons-lite.min.js"></script>
-
-  <!--ICON SETS-->
-  <script src="https://unpkg.com/clarity-icons/shapes/social-shapes.min.js"></script>
-  <script src="https://unpkg.com/clarity-icons/shapes/travel-shapes.min.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Foundation | Welcome</title>
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
 
 </head>
+
 <body>
-    <div class="main-container">
-      <header class="header-6">
-          <div class="branding">
-              <a routerLink="/videos"><img src="assets/img/video-player.svg" alt="" style="width: 50px;"></a>
-          </div>
-          <div class="header-nav">
-              <a routerLinkActive="active" routerLink="/videos" class="nav-link nav-text">Video Store</a> 
-              <a routerLinkActive="active" routerLink="/login" class="nav-link nav-text" *ngIf="cookieValue == 'UNKNOWN'">Login</a> 
-              <a routerLinkActive="active" routerLink="/portal/video-management" class="nav-link nav-text" *ngIf="cookieValue != 'UNKNOWN'">Admin Portal</a>
-          </div>
-          <form class="search">
-              <label for="search_input">
-                <input 
-                    (input)="searchChanged($event.target.value)"
-                    id="search_input" type="text" placeholder="Search for keywords..." list="browsers">
-                    <datalist id="browsers">
-                        <option *ngFor="let video of videoSuggestions" (click)="testClick(video._id)">
-                            <img src="{{video.image}}" alt="image">{{ video.title}}
-                        </option>
-                      </datalist>
-              </label>
-            </form>
-          <div class="header-actions">
-              <a href="javascript://" class="nav-link nav-icon">
-                  <clr-icon shape="cog"></clr-icon>
-              </a>
-          </div>
-      </header>
-      <router-outlet></router-outlet>
+
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-2195009-2', 'auto');
+        ga('send', 'pageview');
+
+        ga('create', 'UA-2195009-27', 'auto', {
+            name: "foundation"
+        });
+        ga('foundation.send', 'pageview');
+    </script>
+    <style>
+
+    </style>
+
+    <div class="top-bar">
+        <div class="row">
+            <div class="top-bar-left">
+                <ul class="dropdown menu" data-dropdown-menu>
+                    <li class="menu-text">Will's Video Store</li>
+                    <li><a routerLinkActive="active" routerLink="/videos" >Video Store</a></li>  
+                    <li><a routerLinkActive="active" routerLink="/login"  *ngIf="cookieValue == 'UNKNOWN'">Login</a></li>
+                    <li class="has-submenu">
+                        <a routerLinkActive="active" routerLink="/portal/video-management"  *ngIf="cookieValue != 'UNKNOWN'">Admin Portal</a>
+
+                        <ul class="submenu menu vertical" data-submenu>
+                            <li><a href="#">One</a></li>
+                            <li><a href="#">Two</a></li>
+                            <li><a href="#">Three</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+
+            <div class="top-bar-right">
+                <ul class="menu">
+                        <li><input
+                        (input)="searchChanged($event.target.value)"
+                        id="search_input" type="text" placeholder="Search for keywords..." list="browsers"></li>
+                        <datalist id="browsers">
+                            <option *ngFor="let video of videoSuggestions" (click)="testClick(video._id)">
+                                <img src="{{video.image}}" alt="image">{{ video.title}}
+                            </option>
+                          </datalist>
+                    <li><button type="button" class="button">Search</button></li>
+                </ul>
+            </div>
+        </div>
     </div>
-  
-  
-  
+    
+    <router-outlet></router-outlet>
+    
+    
+    <div class="callout large secondary">
+        
+        
+
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+        <script>
+            $(document).foundation();
+        </script>
+    </div>
 </body>
+
 </html>
