--- a/client/src/app/video-single/video-single.component.html
+++ b/client/src/app/video-single/video-single.component.html
@@ -1,17 +1,32 @@
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="video-container">
-    <a routerLink="/video/1" class="card clickable">
-        <div class="card-img">
-          <img class="single-img" src="https://2.bp.blogspot.com/-Tc5FpWGHMrM/WyR_YCc_HKI/AAAAAAAFFuo/KpXuVB1A-do_UOZzHqZYjUl35PtGG6xtgCHMYCw/s0/dr_seuss_how_the_grinch_stole_christmas-454843405-large.jpg" alt="">
+<!-- <a routerLink="/video/{{video._id}}" class="card clickable "> -->
+    <!-- <div class="card-img card-img-single">
+        <img class="video-img" src="{{ video.image }}" alt="">
+    </div>
+    <div class="card-block">
+        <h4 class="card-text">{{ video.title}}</h4>
+        <h4 class="card-text">By <a href="#">{{ video.director }}</a></h4>
+        <div *ngIf="video.star !== undefined">
+            <img *ngFor="let s of [].constructor(video.star)" src="assets/img/star.svg" alt="Logo" class="logo-img star">
         </div>
-        <div class="card-block">
-            <h4 class="card-text">The Grinch</h4>
-            <h4 class="card-text">By <a href="#">Author</a></h4>
+    </div> -->
 
-            <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
-            <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
-            <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
-            <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
-            <img src="assets/img/star.svg" alt="Logo" class="logo-img star">
-        </div>
-    </a>
-</div>
+
+    <!-- <div class="column">
+        <img class="thumbnail" src="{{ video.image}}">
+        <h5>{{ video.title}}</h5>
+        <p>{{ video.director}}</p>
+        <img *ngFor="let s of [].constructor(video.star)" src="assets/img/star.svg" alt="Logo" class="logo-img star">
+        <a href="#" class="button expanded ">Reserve</a>
+    </div> -->
+<!-- 
+            <img class="thumbnail" src="https://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button small expanded hollow">Buy</a> -->
+
+
+<!-- </a> -->
+
+
+
+
