--- a/client/src/app/login-form/login-form.component.html
+++ b/client/src/app/login-form/login-form.component.html
@@ -1,24 +1,21 @@
-<div class="login-wrapper">
-    <div class="login">
+<div class="row column align-center medium-6 large-4 container-padded" 
+    style="margin: 10% auto;">
+    <form class="log-in-form">
         <section class="title">
             <h3 class="welcome">Welcome to</h3>
             Will's Video Store
             <h5 class="hint">Use your credentials to sign in or create one now</h5>
         </section>
-        <div class="login-group">
+        <label>Email
             <input #username class="username" type="text" id="login_username" placeholder="Username">
+        </label>
+        <label>Password
             <input #password class="password" type="password" id="login_password" placeholder="Password">
-            <div class="checkbox">
-                <input type="checkbox" id="rememberme">
-                <label for="rememberme">
-                    Remember me
-                </label>
-            </div>
-            <div *ngIf="loginError === true" class="error active">
-                Invalid user name or password
-            </div>
-            <button (click)="login(username.value, password.value)" class="btn btn-primary">NEXT</button>
-            <a href="javascript://" class="signup">Sign up for an account</a>
+        </label>
+        <div *ngIf="loginError === true" class="error active">
+            Invalid user name or password
         </div>
-    </div>
+        <p><button (click)="login(username.value, password.value)" class="button expanded">NEXT</button></p>
+        <p class="text-center"><a href="#">Forgot your password?</a></p>
+    </form>
 </div>
