--- a/client/src/app/video-edit/video-edit.component.html
+++ b/client/src/app/video-edit/video-edit.component.html
@@ -1,27 +1,49 @@
 <div class="clr-row" id="video-wrapper">
-    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
-        <div class="card-img " id="video-img">
-            <img class="single-img" src="{{ video.image }}" alt=""><br>
+    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12" >
+        <div class="card-img col-md-4 col-sm-12 " id="video-img" >
+            <img src="{{ video?.image }}" alt="" style="margin-left: 2%; margin-top: 2%;"><br>
             <input type="file" 
             (change)="fileChange($event)"
             placeholder="Upload file" accept=".png,.jpg"    
             >
         </div>
     </div>
-    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12" style="margin-top: 100px;">
  
         <section class="form-block">
-        <h2><input type="text" value="{{ video.title}}" placeholder="Title" ></h2>
-        <h3>By <input type="text" value="{{ video.director }}" placeholder="Director" > - Thu Sep 14 2017 </h3>
-        <h4>Running Time: <input type="text" value="{{ video.length }}" placeholder="" style="width: 5%"> minutes</h4>
-        <h4>Genre: <input type="text" value="{{ video.genre}}"> </h4>
+        <h4>Title</h4><input type="text" value="{{ video?.title}}" placeholder="Title" >
+        <h4>By</h4> <input type="text" value="{{ video?.director }}" placeholder="Director" >
+        <h4>Length </h4> <input type="text" placeholder="minutes" value="{{ video?.length }}">
+        <h4>Genre </h4>
+        <select [(ngModel)]="video.genre">
+            <option value="" disabled>Choose Genre</option>
+            <option value="Action">Action</option>
+            <option value="Adventure">Adventure</option>
+            <option value="Horror">Horror</option>
+            <option value="Romantic">Romantic</option>
+        </select>
         <br>
-        <input type="text" placeholder="Star" style="width: 1%;" value="{{ video.star }}">/5
+        <h4>Star</h4>
+        <select [(ngModel)]="video.star" >
+            <option value="" disabled>Choose Star</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
+        <h4>Status</h4>
+        <select [(ngModel)]="video.status">
+            <option value="" disabled>Choose Status</option>
+            <option value="Available">Available</option>
+            <option value="Unavailable">Unavailable</option>
+        </select>
+        <h4>Description</h4>
         <blockquote>
-          <input type="text" value="{{ video.description }}" placeholder="Description" style="width: 100%">
+          <input type="text" value="{{ video?.description }}" placeholder="Description" style="width: 100%">
         </blockquote>
-        <button type="button" class="btn" routerLink="/portal/video-management">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="updateVideo($event,video._id)">Update</button>
+        <button type="button" class="button large" routerLink="/portal/video-management">Cancel</button>
+        <button type="button" class="button large" (click)="updateVideo($event,video._id)">Update</button>
         </section>
     </div>
   </div>
