--- a/client/src/app/video-edit/video-edit.component.html
+++ b/client/src/app/video-edit/video-edit.component.html
@@ -11,11 +11,11 @@
     <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12" style="margin-top: 100px;">
  
         <section class="form-block">
-        <h4>Title</h4><input type="text" value="{{ video?.title}}" placeholder="Title" >
-        <h4>By</h4> <input type="text" value="{{ video?.director }}" placeholder="Director" >
-        <h4>Length </h4> <input type="text" placeholder="minutes" value="{{ video?.length }}">
+        <h4>Title</h4><input type="text" [ngModel]="video?.title" (ngModelChange)="video.title = $event" placeholder="Title" >
+        <h4>By</h4> <input type="text" [ngModel]="video?.director" (ngModelChange)="video.director = $event" placeholder="Director" >
+        <h4>Length </h4> <input type="text" placeholder="minutes" [ngModel]="video?.length" (ngModelChange)="video.length = $event">
         <h4>Genre </h4>
-        <select [(ngModel)]="video.genre">
+        <select [ngModel]="video?.genre" (ngModelChange)="video.genre = $event">
             <option value="" disabled>Choose Genre</option>
             <option value="Action">Action</option>
             <option value="Adventure">Adventure</option>
@@ -24,7 +24,7 @@
         </select>
         <br>
         <h4>Star</h4>
-        <select [(ngModel)]="video.star" >
+        <select [ngModel]="video?.star" (ngModelChange)="video.star = $event">
             <option value="" disabled>Choose Star</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -33,14 +33,14 @@
             <option value="5">5</option>
         </select>
         <h4>Status</h4>
-        <select [(ngModel)]="video.status">
+        <select [ngModel]="status" (ngModelChange)="status = $event">
             <option value="" disabled>Choose Status</option>
             <option value="Available">Available</option>
             <option value="Unavailable">Unavailable</option>
         </select>
         <h4>Description</h4>
         <blockquote>
-          <input type="text" value="{{ video?.description }}" placeholder="Description" style="width: 100%">
+          <input type="text" [ngModel]="video?.description" (ngModelChange)="video.description = $event" placeholder="Description" style="width: 100%">
         </blockquote>
         <button type="button" class="button large" routerLink="/portal/video-management">Cancel</button>
         <button type="button" class="button large" (click)="updateVideo($event,video._id)">Update</button>
