--- a/client/src/app/login-form/login-form.component.html
+++ b/client/src/app/login-form/login-form.component.html
@@ -3,8 +3,8 @@
     <form class="log-in-form">
         <section class="title">
             <h3 class="welcome">Welcome to</h3>
-            Will's Video Store
-            <h5 class="hint">Use your credentials to sign in or create one now</h5>
+            
+            <h5 class="hint">Will's Video Store</h5>
         </section>
         <label>Email
             <input #username class="username" type="text" id="login_username" placeholder="Username">
